--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,37 @@
 !!! 5
+mixin implementation(name, headingLevel)
+  - var implementation = implementations[name]
+
+  | <h#{headingLevel}>#{implementation.name}</h#{headingLevel}>
+
+  p= implementation.description
+
+  p If you use node.js or browserify you can install it using npm:
+
+  pre
+    code.
+      npm install #{name}
+
+  p and then load it using require:
+
+  != js(implementation.require)
+
+  p
+    | If you are using any other module system or just want it directly in the browser, you can download a version with a standalone module defenition from 
+    a(href='/implementations/' + name + '/' + name + '-' + versions[name] + '.js') here
+    |  (with 
+    a(href='https://github.com/ForbesLindesay/umd') UMD
+    |  support) or add a script tag directly:
+
+  != html('<script src="http://www.promisejs.org/implementations/' + name + '/' + name + '-' + versions[name] + '.js"></script>')
+
+  p Once installed, you can create a new promise using:
+
+  != js(implementation.create)
+
+  p Full documentation can be found at 
+    a(href=implementation.home)= implementation.home
+
 html(lang='en')
   head
     meta(charset='utf8')
@@ -13,6 +46,7 @@ html(lang='en')
             a.brand(href='/') Promises
             ul.nav.navbar-nav
               li: a(href='/intro') Introduction
+              li: a(href='/implementations') Implementations
             ul.nav.navbar-nav.pull-right
               li: a(href='http://promises-aplus.github.io/promises-spec') Spec
       #content
@@ -28,3 +62,6 @@ html(lang='en')
           | All views expressed are my own and do not necessarily reflect the views of the&nbsp;
           a.jepso(href='http://promises-aplus.github.io/promises-spec') Promises/A+
           |  organisation
+        p
+          | Can you make this better?  Please fork it on 
+          a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
