--- a/views/layout.jade
+++ b/views/layout.jade
@@ -67,3 +67,11 @@ html(lang='en')
         p
           | Can you make this better?  Please fork it on 
           a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-31798041-3', 'promisejs.org');
+      ga('send', 'pageview');
