--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,7 +48,7 @@ html(lang='en')
               li: a(href='/intro') Introduction
               li: a(href='/implementations') Implementations
             ul.nav.navbar-nav.pull-right
-              li: a(href='http://promises-aplus.github.io/promises-spec') Spec
+              li: a(href='http://promisesaplus.com/') Spec
       #content
         block content
           - throw new Error('Every page must have some content.')
@@ -62,7 +62,7 @@ html(lang='en')
           a.jepso(href='http://www.forbeslindesay.co.uk') @ForbesLindesay
         p
           | All views expressed are my own and do not necessarily reflect the views of the&nbsp;
-          a.jepso(href='http://promises-aplus.github.io/promises-spec') Promises/A+
+          a.jepso(href='http://promisesaplus.com/') Promises/A+
           |  organisation
         p
           | Can you make this better?  Please fork it on 
