Fix minor spelling error. easilly -> easily

--- a/views/intro.jade
+++ b/views/intro.jade
@@ -80,7 +80,7 @@ block content
         }, 10000)
 
       p.
-        Of course, requesting an error page can easilly go wrong, and throw an error.  By default, <code>.done</code> just throws that error so it gets logged appropriately and (in environments other than the browser) crashes the application.  We often want to attach our own handler instead though:
+        Of course, requesting an error page can easily go wrong, and throw an error.  By default, <code>.done</code> just throws that error so it gets logged appropriately and (in environments other than the browser) crashes the application.  We often want to attach our own handler instead though:
 
       :js
         var prom = get('http://www.example.com')
