Typo on 'definition'.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ mixin implementation(name, headingLevel)
   != js(implementation.require)
 
   p
-    | If you are using any other module system or just want it directly in the browser, you can download a version with a standalone module defenition from 
+    | If you are using any other module system or just want it directly in the browser, you can download a version with a standalone module definition from 
     a(href='/implementations/' + name + '/' + name + '-' + versions[name] + '.js') here
     |  (with 
     a(href='https://github.com/ForbesLindesay/umd') UMD
