--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 mixin implementation(name, headingLevel)
   - var implementation = implementations[name]
 
@@ -17,9 +17,9 @@ mixin implementation(name, headingLevel)
   != js(implementation.require)
 
   p
-    | If you are using any other module system or just want it directly in the browser, you can download a version with a standalone module defenition from 
+    | If you are using any other module system or just want it directly in the browser, you can download a version with a standalone module defenition from
     a(href='/implementations/' + name + '/' + name + '-' + versions[name] + '.js') here
-    |  (with 
+    |  (with
     a(href='https://github.com/ForbesLindesay/umd') UMD
     |  support) or add a script tag directly:
 
@@ -29,7 +29,7 @@ mixin implementation(name, headingLevel)
 
   != js(implementation.create)
 
-  p Full documentation can be found at 
+  p Full documentation can be found at
     a(href=implementation.home)= implementation.home
 
 html(lang='en')
@@ -65,7 +65,7 @@ html(lang='en')
           a.jepso(href='http://promisesaplus.com/') Promises/A+
           |  organisation
         p
-          | Can you make this better?  Please fork it on 
+          | Can you make this better?  Please fork it on
           a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
